@@ -1,12 +1,0 @@
-﻿namespace AjHask.Expressions
-{
-    using System;
-    using System.Collections.Generic;
-    using System.Linq;
-    using System.Text;
-
-    public interface IExpression
-    {
-        object Evaluate();
-    }
-}
